# HoudiniMind

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT_WORKFLOW.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MainMenuCommon.xml  Makefile  README.md  SECURITY.md  SHOWCASE_PROMPTS.md  houdini_python_functions.json  install.py  mcp_config_example.json  pyproject.toml  requirements.txt  test_mcp.py  test_pop_sim.py  toy_city_on_hill.hip  vex_functions.db
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  tool_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
data/: core_config.json  system_prompt_base.txt  system_prompt_learned.txt
data/db/: autoresearch.db  failure_memory.json  project_rules.db  recipes.db
data/evals/: agent_eval_suite.json  houdini_rag_eval_smoke.json
data/knowledge/: dataset_high_fidelity.json  expand_dataset.py  houdini_1000_python_complex_examples.json  houdini_1000_unique_python_examples.json  houdini_100_vex_examples.json  houdini_500_complex_vex_examples.json  houdini_500_comprehensive_vex_examples.json  houdini_500_hda_examples.json  houdini_500_python_examples.json  houdini_all_sops_knowledge.json  houdini_dop_knowledge.json  houdini_hscript_vars_knowledge.json  houdini_intrinsics_knowledge.json  houdini_knowledge.py  houdini_lop_knowledge.json  houdini_node_chains.json  houdini_rop_knowledge.json  houdini_troubleshooting_knowledge.json  houdini_vex_knowledge.json  houdini_vop_knowledge.json  props_node_chains.json  python_examples.json  sim_debug_knowledge.json  sop_decision_guides.json  sop_errors.json  sop_node_docs.json  sop_recipes.json  sop_workflows.json  vex_examples.json
data/skills/: README.md
docs/: AGENT_METADATA_INTEGRATION.md  METADATA_AWARE_RETRIEVAL.md
hm_ui/: __init__.py  panel.py
python_panels/: HoudiniMind.pypanel
scratch/: agent_run.py  city_demo.py  test_ping.py
scripts/: fix_houdini_mic.sh  houdini_mic_entitlements.plist
src/houdinimind/: __init__.py  cli.py
src/houdinimind/agent/: _tokenizer.py  async_jobs.py  autoresearch_loop.py  budget.py  clarification.py  credential_store.py  critic.py  degradation.py  interceptor.py  llm_client.py  loop.py  mcp_bridge.py  mcp_houdini_server.py  model_adapter.py  preconditions.py  proxy_reference.py  replay_eval.py  request_modes.py  research.py  scene_observer.py  scheduler.py  schema_extractor.py  semantic_scoring.py  sub_agents.py  task_contracts.py  tool_models.py  tool_retry.py  tool_selection.py
src/houdinimind/agent/skills/: __init__.py
src/houdinimind/agent/tools/: __init__.py  _advanced_tools.py  _chain_tools.py  _core.py  _geometry_tools.py  _inspection_tools.py  _knowledge_tools.py  _material_usd_tools.py  _node_tools.py  _pdg_tools.py  _perf_org_tools.py  _registry.py  _repair.py  _scene_tools.py  _simulation_tools.py  _vision_tools.py
src/houdinimind/agent/ui/: __init__.py  _asr.py  _panel.py  _panel_backend.py  _panel_dispatch.py  _panel_layout.py  _panel_state.py  _panel_workflows.py  _widgets.py  panel.py
src/houdinimind/bridge/: event_hooks.py  render_tools.py  scene_reader.py  viewport_capture.py
src/houdinimind/debug/: __init__.py  debug_logger.py
src/houdinimind/inference/: __init__.py  base_backend.py
src/houdinimind/memory/: __init__.py  memory_manager.py  session_log.py  world_model.py
src/houdinimind/rag/: __init__.py  bm25.py  eval_harness.py  injector.py  kb_builder.py  retriever.py
tests/: __init__.py  fake_hou.py  test_agent_foundations.py  test_intelligence_logic.py  test_mcp_bridge_config.py
tests/scratch/hybrid_retriever_prefetch/: knowledge_base.vectors.json
tests/scratch/panel_action_availability/: session.md
tests/scratch/panel_debug_log_dialog/: session.md
tests/scratch/replay_eval/20260409_123000/: session.jsonl
tools/: import_sop_knowledge.py
