[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "houdinimind"
version = "1.0.0"
description = "Agentic AI for SideFX Houdini 21 — local-first, tool-using, zero-hallucination."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.12"
authors = [{ name = "Anshul Vashist", email = "vashistanshul.7@gmail.com" }]
keywords = ["houdini", "sidefx", "agent", "llm", "ollama", "mcp", "fx", "vfx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
    "numpy>=1.24",
    "tiktoken>=0.7",
    "websockets>=12",
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
]

[project.optional-dependencies]
ui = ["PySide6>=6.6"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "black>=24",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pip-audit>=2.7",
    "detect-secrets>=1.5",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/waveWhirlVfx/houdinimind"
Documentation = "https://waveWhirlVfx.github.io/houdinimind"
Issues = "https://github.com/waveWhirlVfx/houdinimind/issues"
Changelog = "https://github.com/waveWhirlVfx/houdinimind/blob/main/CHANGELOG.md"

[project.scripts]
houdinimind = "houdinimind.cli:main"

# --- Hatch build configuration -----------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/houdinimind"]

[tool.hatch.build.targets.wheel.sources]
"src/houdinimind" = "houdinimind"

# --- Ruff ---------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["tests/fake_hou.py", "data/**", "scripts/**", "tools/**", "install.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = [
    "E501", "E402", "E701",
    "B904", "B023", "B019", "B015", "B007",
    "UP007", "UP035",
    "RUF001", "RUF002", "RUF003", "RUF012",
    "E741", "F811", "W293", "F401", "F601", "RUF013", "E722",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]
"hm_ui/**" = ["E402", "F401", "I001"]

# --- Black (formatter fallback; ruff-format preferred) ------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

# --- Mypy ---------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
packages = ["houdinimind"]
exclude = ["tests/fake_hou.py", "build/", "dist/"]

[[tool.mypy.overrides]]
module = ["hou", "hou.*"]
ignore_missing_imports = true

# --- Pytest -------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "integration: end-to-end tests using fake_hou",
    "requires_ollama: needs a live Ollama server",
    "slow: long-running tests",
]

# --- Coverage -----------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["src/houdinimind"]
omit = ["*/__init__.py", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
